# StudyApp

./: .gitignore  README.md  app.py  database.py  database_storage_manager.py  deployment_config.py  gunicorn.conf.py  model_speed_test.py  models.py  pdf_processor.py  performance_optimizations.py  pyproject.toml  speed_optimizations.py  storage_manager.py  tutor_ai.py
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html
